--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="welcome_button">Start</string>
     <string name="main_screen_tempmsg">This is the main screen! I will add a nav drawer at the side to help with more stuff!</string>
     <string name="search_title">SEARCH??</string>
-    <string name="search_hint">NEW SEARCH HERE</string>
+    <string name="search_hint">Search For Books</string>
+    <string name="splash_shown">true</string>
 </resources>
